--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Segmented Ring Generator</title>
+    <script data-goatcounter="https://klm.goatcounter.com/count"
+        async src="//gc.zgo.at/count.js"></script>
     <style>
         * {
             margin: 0;
